--- a/style.css
+++ b/style.css
@@ -1,50 +1,406 @@
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 * {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, sans-serif;
 }
 
-.hero {
+.main{
+  background-image: url(assets/IN-en-20260202-TRIFECTA-perspective_04f5de39-b518-493c-9a8d-6aef11af0457_large\ \(1\).jpg);
+  min-height: 100vh;
+  max-height: 110vh;
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
-  height: 100vh;
-  background: url("https://assets.nflxext.com/ffe/siteui/vlv3/1b0c5b7a.jpg")
-              center/cover no-repeat;
-}
+  z-index: 10;
 
-/* Netflix-style dark overlay */
-.overlay {
-  position: absolute;
-  inset: 0;
-  background: linear-gradient(
-    to top,
-    rgba(0,0,0,0.85),
-    rgba(0,0,0,0.3),
-    rgba(0,0,0,0.85)
-  );
 }
+.box{
+   height: 100vh;
+   width: 100%;
+   opacity: 0.6;
+   top: 0;
+   background-color: black;
+   position: absolute;
+ }
 
-/* Navbar floats above */
-.navbar {
-  position: relative;
-  z-index: 2;
+nav{
+  max-width: 82vw ;
+  margin: auto;
+  
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 24px 48px;
-}
+  z-index: 10;
+  position: relative;
 
-.logo img {
-  height: 40px;
-}
 
-.nav-links {
-  display: flex;
-  gap: 20px;
-}
 
-.nav-links a {
+  
+}
+.btn{
+  height: 35px;
+  width: 140px;
+  
+  text-align: center;
+  background-color: rgba(22, 22, 22, 0.7);
+  
   color: white;
-  text-decoration: none;
-  font-weight: 500;
+  border-radius: 8px;
+  border-color: white;
+  font-size: medium;
+  
+
+}
+.btn-red{
+  height: 38px ;
+  width: 84px;
+  border-radius: 7px;
+  background-color: rgb(229,9,20);
+  color: white;
+  font-size: 15px;
+
+}
+
+.hero{
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  width: 100vw;
+  color: white;
+  position: relative;
+  z-index: 10;
+}
+.font-unlimited{
+  font-size: 55px;
+  font-weight: 900;
+}
+.subheading1{
+  margin-top: 15px;
+  font-size: large;
+  font-weight: 200;
+  
+
+}
+.subheading2{
+  margin-top: 40px;
+  font-size: medium;
+}
+
+.emailplace{
+  margin-top: 15px;
+}
+
+.inputbox{
+  
+  width: 380px;
+  height: 56px;
+  padding: 16px;
+  background: rgba(22, 22, 22, 0.7); /* Netflix dark overlay */
+  border: 1px solid rgba(128,128,128,0.7);
+  border-radius: 4px;              /* sharp rectangle */
+  color: #fff;
+  font-size: 16px;
+  outline: none;
+}
+
+.netflix-input::placeholder {
+  color: #8c8c8c;
+  font-size: 14px;
+}
+
+.getstarted{
+  width: 190px;
+  height: 59px;
+  background-color: rgb(229,9,20);
+  color: white;
+  font-size: x-large;
+  border-radius: 8px;
+}
+
+main{
+  margin-top: 36px;
+  background-color: black;
+  height: max-content;
+  width: 100vw;
+  position: relative;
+  z-index: 9;
+}
+
+.trending{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 184px;
+
+  width: max-content;
+  
+  height: 80px;
+  color: rgb(245, 240, 240);
+  
+
+}
+
+ul {
+  margin-top: 25px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  justify-content: center;
+  align-items: center;
+  gap: 40px;          /* spacing between items */
+  list-style: none;  /* remove bullets */
+  padding: 0;
+  margin: 0;
+  position: relative;
+  z-index: 9;
+  width: 80vw;              /* target size on laptops */
+  max-width: 1200px;        /* Netflix-style cap */
+  margin: 25px auto;  
+}
+
+ul li {
+  position: relative;
+  
+  white-space: nowrap;
+ 
+}
+
+ul li img{
+  border-radius: 8px;
+}
+
+.number{
+    /* display: inline-flex; */
+    top: 164px;
+    left: -23px;
+    display: flex;
+  align-items: center;
+  justify-content: center;
+    padding: 0;
+    font-size: 100px;
+    color: rgb(11, 10, 10);
+    font-weight: 750;
+    position: absolute;
+    /* top: 153px; */
+    -webkit-text-stroke: 2px #faf7f7;
+    text-shadow: white;
+}
+
+
+
+.reasons{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 112px;
+
+  width: max-content;
+  
+  height: max-content;
+  color: rgb(245, 240, 240);
+  font-size: large;
+  
+}
+
+.ulcards{
+    
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  justify-content: center;
+  align-items: center;
+  gap: 40px;          /* spacing between items */
+  list-style: none;  /* remove bullets */
+  padding: 0;
+  margin: 0;
+  position: relative;
+  z-index: 9;
+  width: 85vw;              /* target size on laptops */
+  max-width: 1400px;        /* Netflix-style cap */
+  margin: 10px auto;
+  
+  min-height: 250px;
+}
+
+.indicards{
+  padding: 25px 15px;
+  white-space: normal;
+  
+    background: radial-gradient(
+      circle at top left,
+      rgba(120, 80, 255, 0.25),
+      transparent 60%
+    ),
+    linear-gradient(
+      135deg,
+      #0b0c1d,
+      #130c22,
+      #1a0f2e
+    );
+  
+
+  border-radius: 10px;
+  height: 230px;
+  color: gray;
+  overflow: hidden;
+  
+}
+
+.text{
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+  font-size: medium;
+  color: gray;
+  
+  
+}
+
+.text h2{
+  color: white;
+}
+
+.faq{
+  color: white;
+    display: flex;
+  flex-direction: column;
+  margin: 2px auto;
+    width: 80vw;
+  max-width: 1400px;
+  z-index: 9;
+  
+  
+
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+.header{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 80vw;
+  max-width: 1400px;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.boxes{
+  height: 70px;
+  width: 80vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+ 
+  background-color:rgb(45,45,45);
+  padding: 0 15px;
+  font-size: 23px;
+}
+
+
+
+.underfaq{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+.subheading{
+  margin-top: 80px;
+
+  color: white;
+}
+
+footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  
+  margin: 70px auto;
+  color: rgb(196, 190, 190);
+  cursor: pointer;
+  
+}
+
+.footerstarter{
+  
+  display: flex;
+  width: 80vw;
+  justify-content: flex-start;
+  margin: 2px auto;
+}
+
+
+.footergrid {
+  
+  width: 82vw;
+  max-width: 1600px;
+  position: relative;
+  z-index: 9;
+  
+  margin: 20px auto;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 24px;
+  
+  align-items: start;
+  
+  gap: 24px;
+  
+}
+
+.box1{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  
+  row-gap: 18px;
+  height: 200px;
+  
+  text-decoration: underline;
+  
+  font-size: small;
+  padding: 20px;
+}
+
+
+.last{
+  width: 82vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  max-width: 1600px;
+  position: relative;
+  z-index: 9;
+  
+  margin: 20px auto;
+  color: rgb(196, 190, 190);
+  font-size: small;
+  row-gap: 45px;
+  
+  
+
+}
+.miniheading1{
+  font-size: medium;
+
+}
+.miniheading2{
+  margin-bottom: 150px;
 }
